--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
  P5dwynhEj2cajOxK
 ZuSMoCC2ublCVtWT
 </p>
+  <link rel="icon" type="image/x-icon" href="idk.png">
+
 <title>UnUsed GiftCards</title>
 <p>Roblox gift cards: xbQ39uLn2uSCSH4j
  0EC8W5cF9KPC9MYT
