--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
  P5dwynhEj2cajOxK
 ZuSMoCC2ublCVtWT
 </p>
-  <link rel="icon" type="image/x-icon" href="idk.png">
+  <link rel="icon" type="image/x-icon" href="idk.ico">
 
 <title>UnUsed GiftCards</title>
 <p>Roblox gift cards: xbQ39uLn2uSCSH4j
